# dynamics-labs

./: .gitignore  CMakeLists.txt  package.xml  readme.md
config/: scara.rviz  scara_control.yaml
launch/: rviz.launch  scara_world.launch
scripts/: control.py
urdf/: scara.xacro
